# texiq

./: .gitignore  AGENTS.md  LICENSE  README.md  dune-project  texiq.opam
.github/workflows/: ci.yml  release.yml
bench/: benchmark_check.ml  dune
docs/: ARCHITECTURE.md  PERFORMANCE.md  PRD.md  TESTING.md  agent-playbook.md  implementation_plan.md
lib/: catalog.ml  catalog.mli  cli.ml  compression.ml  compression.mli  diagnostic.ml  diagnostic.mli  dir_parser.ml  dir_parser.mli  dune  emacs_info.ml  emacs_info.mli  engine.ml  engine.mli  graph.ml  graph.mli  info_id.ml  info_id.mli  info_parser.ml  info_parser.mli  info_path.ml  info_path.mli  manual.ml  manual.mli  query_ast.ml  query_eval.ml  query_eval.mli  query_parser.ml  query_parser.mli  query_typecheck.ml  query_typecheck.mli  render.ml  render.mli  search.ml  search.mli  source.ml  source.mli  texiq.ml  texiq.mli
packaging/homebrew/: texiq.rb.in
scripts/: differential_test.sh  package_release.sh  smoke_test.sh
skills/texiq/: SKILL.md
skills/texiq/agents/: openai.yaml
skills/texiq/references/: query-reference.md
test/: dune  integration_tests.ml
test/cli.t/: dune  run.t
test/fixtures/: info_nonsplit.info.in  info_split_main.info.in  info_split_part.info.in
test/fixtures/catalog/first/: dir
test/fixtures/catalog/second/: dir.info
